[tool.poetry]
name = "puya-bignumber"
version = "0.2.2"
description = "Math Library for big numbers in Puya for Algorand"
authors = ["Winton Nathan-Roberts <winton.nathan.roberts@gmail.com>"]
readme = "README.md"
license = "GNU GPLv3"
repository = "https://github.com/Helium-Labs/Puya-BigNumber"
packages = [{include = "puya_bignumber"}]

[tool.poetry.dependencies]
python = "^3.12"
py-algorand-sdk = "^2.6.1"
algorand-python = "^2.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
algorand-python-testing = "^0.4.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
